logs/dag_id=random_user_pipeline/run_id=manual__2025-05-20T04:35:27.188770+00:00/task_id=log_ingestion_audit/attempt=1.log
[2025-05-20T04:36:53.465+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-05-20T04:36:53.751+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: random_user_pipeline.log_ingestion_audit manual__2025-05-20T04:35:27.188770+00:00 [queued]>
[2025-05-20T04:36:53.763+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: random_user_pipeline.log_ingestion_audit manual__2025-05-20T04:35:27.188770+00:00 [queued]>
[2025-05-20T04:36:53.765+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-05-20T04:36:53.781+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): log_ingestion_audit> on 2025-05-20 04:35:27.188770+00:00
[2025-05-20T04:36:53.787+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'random_user_pipeline', 'log_ingestion_audit', 'manual__2025-05-20T04:35:27.188770+00:00', '--job-id', '316', '--raw', '--subdir', 'DAGS_FOLDER/random_user_pipeline.py', '--cfg-path', '/tmp/tmpkgsy_j5d']
[2025-05-20T04:36:53.789+0000] {standard_task_runner.py:91} INFO - Job 316: Subtask log_ingestion_audit
[2025-05-20T04:36:53.790+0000] {logging_mixin.py:188} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=369) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-05-20T04:36:53.790+0000] {standard_task_runner.py:63} INFO - Started process 370 to run task
[2025-05-20T04:36:54.437+0000] {task_command.py:426} INFO - Running <TaskInstance: random_user_pipeline.log_ingestion_audit manual__2025-05-20T04:35:27.188770+00:00 [running]> on host 01a6db3bec8d
[2025-05-20T04:36:56.490+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='papala.ramesh@quation.in,smilesoframs@gmail.com,ramesh.rams333@gmail.com' AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='random_user_pipeline' AIRFLOW_CTX_TASK_ID='log_ingestion_audit' AIRFLOW_CTX_EXECUTION_DATE='2025-05-20T04:35:27.188770+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-05-20T04:35:27.188770+00:00'
[2025-05-20T04:36:56.491+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-05-20T04:36:56.502+0000] {sql.py:276} INFO - Executing: -- Create audit table if it doesn't exist
CREATE TABLE IF NOT EXISTS ingestion_audit (
    id SERIAL PRIMARY KEY,
    ingestion_date DATE,
    source TEXT,
    record_count INT,
    status TEXT,
    notes TEXT,
    retry_count INT,
    start_time TIMESTAMP,
    end_time TIMESTAMP,
    logged_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Insert audit log
INSERT INTO ingestion_audit (
    ingestion_date,
    source,
    record_count,
    status,
    notes,
    retry_count,
    start_time,
    end_time
)
VALUES (
    '2025-05-20',
    'random_product_api',
    0,
    'failure',
    'cannot access local variable 'data' where it is not associated with a value',
    2,
    '2025-05-20T04:36:46.544841'::timestamp,
    '2025-05-20T04:36:46.544858'::timestamp
);
[2025-05-20T04:36:56.504+0000] {crypto.py:82} WARNING - empty cryptography key - values will not be stored encrypted.
[2025-05-20T04:36:56.504+0000] {base.py:84} INFO - Using connection ID '***_default' for task execution.
[2025-05-20T04:36:56.508+0000] {base.py:84} INFO - Using connection ID '***_default' for task execution.
[2025-05-20T04:36:56.787+0000] {sql.py:487} INFO - Running statement: -- Create audit table if it doesn't exist
CREATE TABLE IF NOT EXISTS ingestion_audit (
    id SERIAL PRIMARY KEY,
    ingestion_date DATE,
    source TEXT,
    record_count INT,
    status TEXT,
    notes TEXT,
    retry_count INT,
    start_time TIMESTAMP,
    end_time TIMESTAMP,
    logged_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Insert audit log
INSERT INTO ingestion_audit (
    ingestion_date,
    source,
    record_count,
    status,
    notes,
    retry_count,
    start_time,
    end_time
)
VALUES (
    '2025-05-20',
    'random_product_api',
    0,
    'failure',
    'cannot access local variable 'data' where it is not associated with a value',
    2,
    '2025-05-20T04:36:46.544841'::timestamp,
    '2025-05-20T04:36:46.544858'::timestamp
);, parameters: None
[2025-05-20T04:36:56.790+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-05-20T04:36:56.791+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "data"
LINE 31:     'cannot access local variable 'data' where it is not ass...
                                            ^

[2025-05-20T04:36:57.088+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=random_user_pipeline, task_id=log_ingestion_audit, run_id=manual__2025-05-20T04:35:27.188770+00:00, execution_date=20250520T043527, start_date=20250520T043653, end_date=20250520T043657
[2025-05-20T04:36:57.107+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 316 for task log_ingestion_audit (syntax error at or near "data"
LINE 31:     'cannot access local variable 'data' where it is not ass...
                                            ^
; 370)
[2025-05-20T04:36:57.145+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-05-20T04:36:57.452+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-05-20T04:36:57.455+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
